JDK-8366875 : CompileTaskTimeout should be reset for each iteration of RepeatCompilation
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: 26
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • Submitted: 2025-09-04
  • Updated: 2025-09-25
  • Resolved: 2025-09-19
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 26
26 b17Fixed
Related Reports
Causes :  
Description
The CompileTaskTimeout is supposed to limit the amount of time spent on a single compilation. However, it operates on a compilation task, which can contain multiple compilation of the same method when -XX:RepeatCompilation is used. The timeout should be reset for every compilation so tests using -XX:RepeatCompilation do not need special longer timeouts.
Comments
Changeset: 94a301a7 Branch: master Author: Manuel Hässig <mhaessig@openjdk.org> Date: 2025-09-19 09:08:29 +0000 URL: https://git.openjdk.org/jdk/commit/94a301a70e19be284f406ebb6d8b94b6f96e1a24
19-09-2025

A pull request was submitted for review. Branch: master URL: https://git.openjdk.org/jdk/pull/27120 Date: 2025-09-05 15:27:22 +0000
16-09-2025

ILW = False-positive compilation task timeouts, with RepeatCompilation and CompileTaskTimeout, no workaround = MLH = P4
04-09-2025