8366875: CompileTaskTimeout should be reset for each iteration of RepeatCompilation

Reviewed-by: dlong, epeter